[package]
name = "tblf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true # link time optimization
codegen-units = 1 # reduce binary size
# panic = "abort" # abort on panic

[dependencies]
